@@ -25,15 +25,15 @@
  */
 package org.niis.xroad.cs.admin.api.globalconf;
 
-import ee.ria.xroad.common.CodedException;
-import ee.ria.xroad.common.ErrorCodes;
-import ee.ria.xroad.common.ExpectedCodedException;
+import ee.ria.xroad.common.ExpectedXrdRuntimeException;
 
 import org.hamcrest.CoreMatchers;
 import org.hamcrest.core.AnyOf;
 import org.hamcrest.core.StringContains;
 import org.junit.Rule;
 import org.junit.Test;
+import org.niis.xroad.common.core.exception.ErrorCode;
+import org.niis.xroad.common.core.exception.XrdRuntimeException;
 import org.niis.xroad.cs.admin.api.dto.OptionalConfPart;
 
 import java.io.File;
@@ -56,7 +56,7 @@ public class OptionalConfPartTest {
     private static final String MESSAGE_CONVERTER_FILE = CONF_DIR + File.separator + "message-converter.ini";
 
     @Rule
-    public ExpectedCodedException thrown = ExpectedCodedException.none();
+    public ExpectedXrdRuntimeException thrown = ExpectedXrdRuntimeException.none();
 
     /**
      * Test to ensure test configuration part content identifier can be read.
@@ -64,7 +64,7 @@ public class OptionalConfPartTest {
      * @throws IOException in case optional parts directory cannot be read
      */
     @Test
-    public void shouldGetContentIdentifier() throws IOException {
+    public void shouldGetContentIdentifier() {
         // Given
         OptionalPartsConf conf = new OptionalPartsConf(CONF_DIR);
         String partFile = "test-configuration-part.xml";
@@ -79,7 +79,7 @@ public class OptionalConfPartTest {
     }
 
     @Test
-    public void shouldGetPartFileName() throws IOException {
+    public void shouldGetPartFileName() {
         OptionalPartsConf conf = new OptionalPartsConf(CONF_DIR);
 
         assertEquals("messageconverter.xml", conf.getPartFileName("MESSAGECONVERTER"));
@@ -87,11 +87,11 @@ public class OptionalConfPartTest {
     }
 
     @Test
-    public void shouldGetPartFileNameThrowException() throws IOException {
+    public void shouldGetPartFileNameThrowException() {
         String confDir = "src/test/resources/configuration-parts";
         OptionalPartsConf conf = new OptionalPartsConf(confDir);
 
-        assertThrows(CodedException.class, () -> conf.getPartFileName("NOT-EXISTING"));
+        assertThrows(XrdRuntimeException.class, () -> conf.getPartFileName("NOT-EXISTING"));
     }
 
     /**
@@ -100,7 +100,7 @@ public class OptionalConfPartTest {
      * @throws IOException in case optional parts directory cannot be read
      */
     @Test
-    public void shouldGetAllOptionalConfigurationParts() throws IOException {
+    public void shouldGetAllOptionalConfigurationParts() {
         // Given
         OptionalPartsConf conf = new OptionalPartsConf(CONF_DIR);
 
@@ -138,7 +138,7 @@ public class OptionalConfPartTest {
         List<String> errors = conf.getErrors();
 
         assertEquals(1, errors.size());
-        assertThat(errors.get(0), containsPermissionDenied());
+        assertThat(errors.getFirst(), containsPermissionDenied());
 
         restorePermissions();
     }
@@ -149,7 +149,7 @@ public class OptionalConfPartTest {
      * @throws IOException in case optional parts directory cannot be read
      */
     @Test
-    public void shouldReturnEmptyListWhenNoConfDirectory() throws IOException {
+    public void shouldReturnEmptyListWhenNoConfDirectory() {
         // Given
         String confDir = "src/test/resources/configuration-parts-NONEXISTENT";
         OptionalPartsConf conf = new OptionalPartsConf(confDir);
@@ -167,7 +167,7 @@ public class OptionalConfPartTest {
      * @throws IOException in case optional parts directory cannot be read
      */
     @Test
-    public void shouldSkipFileWhenMalformed() throws IOException {
+    public void shouldSkipFileWhenMalformed() {
         // Given
         String confDir = "src/test/resources/configuration-parts-MALFORMED_FILE";
         OptionalPartsConf conf = new OptionalPartsConf(confDir);
@@ -185,7 +185,7 @@ public class OptionalConfPartTest {
      * @throws IOException in case optional parts directory cannot be read
      */
     @Test
-    public void shouldNotAllowReservedFilenames() throws IOException {
+    public void shouldNotAllowReservedFilenames() {
         testMalformedConf("src/test/resources/configuration-parts-RESERVED_FILE");
     }
 
@@ -195,7 +195,7 @@ public class OptionalConfPartTest {
      * @throws IOException in case optional parts directory cannot be read
      */
     @Test
-    public void shouldNotAllowReservedContentIds() throws IOException {
+    public void shouldNotAllowReservedContentIds() {
         testMalformedConf("src/test/resources/configuration-parts-RESERVED_ID");
     }
 
@@ -205,12 +205,12 @@ public class OptionalConfPartTest {
      * @throws IOException in case optional parts directory cannot be read
      */
     @Test
-    public void shouldNotAllowDuplicateFilenames() throws IOException {
+    public void shouldNotAllowDuplicateFilenames() {
         testMalformedConf("src/test/resources/configuration-parts-DUPLICATES");
     }
 
-    private void testMalformedConf(String confDir) throws IOException {
-        thrown.expectError(ErrorCodes.X_MALFORMED_OPTIONAL_PARTS_CONF);
+    private void testMalformedConf(String confDir) {
+        thrown.expectError(ErrorCode.MALFORMED_OPTIONAL_PARTS_CONF.code());
 
         new OptionalPartsConf(confDir);
     }
